assets/custom/css/style.css
/* ... */
@font-face {
  font-family: museo-sans-n7;
  src: url(https://use.typekit.com/af/c2dac6/00000000000000000000e805/27/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n7&v=3) format("woff2"), url(https://use.typekit.com/af/c2dac6/00000000000000000000e805/27/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n7&v=3) format("woff"), url(https://use.typekit.com/af/c2dac6/00000000000000000000e805/27/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n7&v=3) format("opentype");
  font-weight: 700;
  font-style: normal;
}
@font-face {
  font-family: museo-sans-i7;
  src: url(https://use.typekit.com/af/dc6ba3/00000000000000000000e806/27/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i7&v=3) format("woff2"), url(https://use.typekit.com/af/dc6ba3/00000000000000000000e806/27/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i7&v=3) format("woff"), url(https://use.typekit.com/af/dc6ba3/00000000000000000000e806/27/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i7&v=3) format("opentype");
  font-weight: 700;
  font-style: italic;
}
@font-face {
  font-family: museo-slab-n3;
  src: url(https://use.typekit.com/af/f8c331/0000000000000000000100fe/27/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n3&v=3) format("woff2"), url(https://use.typekit.com/af/f8c331/0000000000000000000100fe/27/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n3&v=3) format("woff"), url(https://use.typekit.com/af/f8c331/0000000000000000000100fe/27/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n3&v=3) format("opentype");
  font-weight: 300;
  font-style: normal;
}
@font-face {
  font-family: museo-slab-i3;
  src: url(https://use.typekit.com/af/810490/000000000000000000010141/27/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i3&v=3) format("woff2"), url(https://use.typekit.com/af/810490/000000000000000000010141/27/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i3&v=3) format("woff"), url(https://use.typekit.com/af/810490/000000000000000000010141/27/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i3&v=3) format("opentype");
  font-weight: 300;
  font-style: italic;
}
@font-face {
  font-family: museo-slab-n7;
  src: url(https://use.typekit.com/af/1b8c3f/000000000000000000011aff/27/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n7&v=3) format("woff2"), url(https://use.typekit.com/af/1b8c3f/000000000000000000011aff/27/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n7&v=3) format("woff"), url(https://use.typekit.com/af/1b8c3f/000000000000000000011aff/27/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n7&v=3) format("opentype");
  font-weight: 700;
  font-style: normal;
}
@font-face {
  font-family: museo-slab-i7;
  src: url(https://use.typekit.com/af/3a798d/00000000000000000000ec0a/27/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i7&v=3) format("woff2"), url(https://use.typekit.com/af/3a798d/00000000000000000000ec0a/27/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i7&v=3) format("woff"), url(https://use.typekit.com/af/3a798d/00000000000000000000ec0a/27/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i7&v=3) format("opentype");
  font-weight: 700;
  font-style: italic;
}


/* === COLOR VARIABLES === */
:root {
  --oa-white: #FFFFFF;
  --oa-black: #030006;
  --oa-grey:#36454F;
  --oa-red: #E31837;
  --oa-blue: #005596;

  --site-white: var(--oa-white);
  --site-black: var(--oa-black);
  --site-primary: var(--oa-red);
  --site-accent-dark: var(--oa-grey);
  --site-accent-light: var(--oa-red);

  --page-background: var(--site-white);
  --page-text: var(--site-black);
  --nav-background: var(--site-primary);
  --nav-links: var(--site-white);
  --nav-links-hover: var(--oa-grey);
}


/* === GLOBAL STYLES === */
body {
  font-size: 1rem;
  color: var(--page-text);
  background-color: var(--page-background);
  font-family: 'museo-sans', sans-serif;
  padding-top: 65px;
}
p {
  line-height: 1.5;
  margin: 30px 0;
}
h1, h2, h3 {
  font-weight: 800;
  font-family: 'museo-slab', serif;
}
h4, h5, h6 {
  font-weight: 800;
  font-family: 'museo-sans', sans-serif;
}
h1 {
  font-size: 2rem;
}
h2 {
  font-size: 1.3rem;
}
a {
  color: var(--site-accent-light);
}
a:focus, a:hover {
  text-decoration: none;
  color: var(--site-accent-light)
}
blockquote {
  font-style: italic;
  color: #868e96;
}
iframe {
  margin-bottom: 0.5rem;
}
.section-heading {
  font-size: 36px;
  font-weight: 700;
  margin-top: 60px;
}
.caption {
  font-size: 14px;
  font-style: italic;
  display: block;
  margin: 0;
  padding: 10px;
  text-align: center;
  border-bottom-right-radius: 5px;
  border-bottom-left-radius: 5px;
}
.text-primary{
  color: var(--site-primary) !important;
}
/*alerts*/
.alert-page {
  border-radius: 0;
}
.alert-primary {
  color: var(--site-white);
  background-color: var(--oa-blue);
  border-style: none;
}
.alert-primary a {
  color: var(--site-white);
  font-weight: bold;
  font-style: italic;
}
.alert-warning {
  color: var(--site-white);
  background-color: var(--oa-red);
  border-style: none;
}
.alert-warning a {
  color: var(--site-white);
  text-decoration: underline;
}
/*buttons*/
.btn-primary {
  color: var(--site-white);
  background-color: var(--site-primary);
  border-color: var(--site-primary);
  font-weight: 700;
  text-transform: uppercase;
}
.btn-primary:hover, .btn-primary:focus, .btn-primary:active {
  color: var(--site-primary);
  background-color: var(--site-white) !important;
  border-color: var(--site-primary) !important;
  font-weight: 700;
  text-transform: uppercase;
}
/* ... */

